--- a/dist-texts/index.html
+++ b/dist-texts/index.html
@@ -27,14 +27,14 @@
 					<li>한의학고전DB 오류 수정 등으로 원문이 수정될 경우 자동으로 update됩니다. 가능한 최신 파일을 받아 사용해 주세요.</li>
 					<li>파일 인코딩은 UTF-8이며, 호환한자(CJK Compatibility Ideographs)는 모두 통합한자(CJK Unified Ideographs = Han)로 변환하였습니다.</li>
 					<li>배포된 파일에는 원문에 포함된 도상, 원문에 대한 교감기가 포함되어 있지 않습니다. 단, 도상 속의 텍스트는 포함되어 있습니다.</li>
-					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="https://kmongoing.github.io/document/document/markup-syntax-for-classics" target="_blank">여기</a>를 참조하여 사용하시기 바랍니다.</li>
+					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="https://mediclassics.github.io/document/document/markup-syntax-for-classics" target="_blank">여기</a>를 참조하여 사용하시기 바랍니다.</li>
 				</ul>
 				<hr>
 				<h3><i class="fa fa-exclamation-triangle" aria-hidden="true"></i><i class="icon-warning-sign"></i>  주의사항</h3>
 				<ul>
 					<li>다운로드에는 약간의 시간이 소요됩니다. 브라우저를 동작하지 마시고 다운로드가 끝날때 까지 기다려 주시기 바랍니다.</li>
 					<li>IE(Internet Explorer)의 경우 예상치 못한 오류가 나타날 수 있으므로, 동작에 이상이 있을 경우 다른 브라우저를 이용해 주시기 바랍니다.</li>
-					<li>본 페이지의 작동 오류는 <a href="https://github.com/KMOnGoing/apps/issues" target="_blank">issue report</a>에 신고해 주시기 바랍니다.</li>
+					<li>본 페이지의 작동 오류는 <a href="https://github.com/mediclassics/apps/issues" target="_blank">issue report</a>에 신고해 주시기 바랍니다.</li>
 					<li>원문 텍스트의 오류는 <a href="https://mediclassics.kr" target="_blank">한의학고전DB</a> 해당 서적 원문에 신고 부탁드립니다.</li>
 				</ul>
 				<hr>
