--- a/dist-texts/index.html
+++ b/dist-texts/index.html
@@ -17,7 +17,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 jumbotron" >
-				<h1>한의학고전DB 고의서 원문 배포 서비스  <small><a href="#/"><i class="fa fa-home" aria-hidden="true"></i></a></small></h1>
+				<h1>고의서 원문 배포 서비스 <small>한의학고전DB<a href="#/"><i class="fa fa-home" aria-hidden="true"></i></a></small></h1>
 				<br>
 				<p><a href="https://mediclassics.kr" target="_blank">한의학고전DB</a>에서 제공하고 있는 고의서 원문 가운데 공공성이 높은 것들은 단계적으로 이 페이지를 통해 배포할 예정입니다. </p>
 
