--- a/hanzitn/index.html
+++ b/hanzitn/index.html
@@ -14,10 +14,14 @@
 		  opacity: 50;
 		  font-size: 18px;
 		}
-		
+
 		body {
-      font-family: Verdana, Arial, Helvetica, sans-serif, times, "Heiti TC", PMingLiU, PMingLiu-ExtB, SimSun, SimSun-ExtB, HanaMinA, HanaMinB;
-    }
+      		font-family: Verdana, Arial, Helvetica, sans-serif, times, "Heiti TC", PMingLiU, PMingLiu-ExtB, SimSun, SimSun-ExtB, HanaMinA, HanaMinB;
+    	}
+
+		.desc {
+			text-align: right;
+		}
     </style>
   </head>
 
@@ -32,15 +36,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><span>HanziTN</span></a>
+          <a class="navbar-brand" href="/"><span>Hanzi Text Normalizer</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active">
-              <a href="#">Home</a>
+              <a href="https://mediclassics.github.io">Mediclassics Info</a>
             </li>
             <li>
-              <a href="#">Contacts</a>
+              <a href="https://github.com/mediclassics/apps/issues">Contacts</a>
             </li>
           </ul>
         </div>
@@ -51,21 +55,28 @@
     <div class="section" ng-controller="duplicationsMergeCtrl">
       <div class="container">
         <div class="row">
-        	<h1>
-        	  <i class="fa fa-spinner fa-fw" ng-class="{'fa-pulse': dupProcessing}"></i>
-        	  Merge Hanzi duplications
-			  	<button class="btn btn-primary btn-lg" ng-click="mergeDuplications()">TN</button>
-			</h1>
-        </div>
-        <div class="row" style="height:30%">
+			<div class="col-md-6">
+        		<h1>
+        	  		<i class="fa fa-spinner fa-fw" ng-class="{'fa-pulse': dupProcessing}"></i>
+        	  		Merge Hanzi Duplications
+				</h1>
+				<p class="desc">다중코드자를 통합합니다.</p>
+			</div>
+			<div class="col-md-6">
+				<h1>
+					<button class="btn btn-primary btn-lg" ng-click="mergeDuplications()">TN</button>
+				</h1>
+			</div>
+		</div>
+        <div class="row">
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5" style="height:30%"
             	ng-model="rawTextdup"
             	ng-trim="true"
             ></textarea>
           </div>
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5" style="height:30%"
             	ng-bind="mergedTextdup"
             ></textarea>
           </div>
@@ -76,26 +87,34 @@
     <div class="section" ng-controller="variantsMergeCtrl">
       <div class="container">
         <div class="row">
-        	<h1>
-        	<i class="fa fa-spinner fa-fw" ng-class="{'fa-pulse': valProcessing}"></i>
-        	  Merge Hanzi Variants
-        	  <button class="btn btn-primary btn-lg" ng-click="mergeVariants()">TN</button>
-  				<div class="btn-group">
-  					<a class="btn btn-lg btn-warning" ng-class="{'active': tntype==='general'}" ng-click="tntype='general'" >General</a>
-  					<a class="btn btn-lg btn-warning" ng-class="{'active': tntype!=='general'}" ng-click="tntype='extention'" >KM-extention</a>
-  				</div>
-        	  </h1>
-
+			<div class="col-md-6">
+        		<h1>
+        			<i class="fa fa-spinner fa-fw" ng-class="{'fa-pulse': valProcessing}"></i>
+        	  		Merge Hanzi Variants
+		  		</h1>
+				<p class="desc">
+					이체자를 통합합니다.
+				</p>
+		  	</div>
+		  	<div class="col-md-6">
+				<h1>
+					<button class="btn btn-primary btn-lg" ng-click="mergeVariants()">TN</button>
+	    			<div class="btn-group">
+	    				<a class="btn btn-lg btn-warning" ng-class="{'active': tntype==='general'}" ng-click="tntype='general'" >General</a>
+	    				<a class="btn btn-lg btn-warning" ng-class="{'active': tntype!=='general'}" ng-click="tntype='extention'">KM-extention</a>
+	    			</div>
+				</h1>
+		  	</div>
         </div>
-        <div class="row" style="height:30%">
+        <div class="row">
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5"  style="height:30%"
             	ng-model="rawTextvar"
             	ng-trim="true"
             ></textarea>
           </div>
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5"  style="height:30%"
             	ng-bind="mergedTextvar"
             ></textarea>
           </div>
@@ -107,27 +126,34 @@
       <div class="container">
 
         <form class="form-inline">
-          <h1>Replace
-            <button type="submit" class="btn btn-primary btn-lg" ng-click="replaceAll()">Replace</button>
-            <button type="submit" class="btn btn-info btn-lg" ng-click="clone()">Clone</button>
-          </h1>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Before(Regx)" ng-model="bf">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="After" ng-model="af">
-          </div>
+			<div class="col-md-6">
+				<h1>Replace	</h1>
+			</div>
+        	<div class="col-md-6">
+				<h1>
+            		<button type="submit" class="btn btn-primary btn-lg" ng-click="replaceAll()">Replace</button>
+            		<button type="submit" class="btn btn-info btn-lg" ng-click="clone()">Clone</button>
+				</h1>
+			</div>
+
+          	<div class="form-group">
+            	<input type="text" class="form-control" placeholder="Before(Regx)" ng-model="bf">
+          	</div>
+          	<div class="form-group">
+            	<input type="text" class="form-control" placeholder="After" ng-model="af">
+          	</div>
+
         </form>
 
-        <div class="row" style="height:30%">
+        <div class="row" >
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5" style="height:30%"
             	ng-model="rawText"
             	ng-trim="true"
             ></textarea>
           </div>
           <div class="col-md-6">
-            <textarea class="form-control" rows="5"
+            <textarea class="form-control" rows="5" style="height:30%"
             	ng-bind="mergedText"
             ></textarea>
           </div>
@@ -141,7 +167,7 @@
 
         <div class="row">
         	<h1>Appendix</h1>
-          	<div class="col-sm-6 text-left">
+          	<div class="col-sm-12 text-left">
 				<b>Dict Ref</b>
 				<p>
 					<a class="btn btn-info btn-sm" ng-repeat="dict in dictRefAddress" ng-href="{{dict.url}}" target="_blank" ng-bind="dict.name"></a>
@@ -150,19 +176,13 @@
               	<p>
   					<a class="btn btn-info btn-sm" ng-repeat="eref in externalRefs" ng-href="{{eref.url}}" target="_blank" ng-bind="eref.name"></a>
               	</p>
+				<b>External Tools</b>
+              	<p>
+  					<a class="btn btn-info btn-sm" ng-repeat="etool in externalTools" ng-href="{{etool.url}}" target="_blank" ng-bind="etool.name"></a>
+              	</p>
+
           </div>
-          <div class="col-sm-6">
-            <div class="row">
-              <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
-            </div>
-            <!-- <div class="row">
-              <div class="col-md-12 hidden-xs text-right">
-                <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
-            </div> -->
-          </div>
+
         </div>
       </div>
     </footer>
