--- a/hanzitn/index.html
+++ b/hanzitn/index.html
@@ -22,6 +22,14 @@
 		.desc {
 			text-align: right;
 		}
+
+		del {
+			background:#ffe6e6;
+		}
+
+		ins {
+			background:#e6ffe6;
+		}
     </style>
   </head>
 
@@ -160,6 +168,31 @@
         </div>
       </div>
     </div>
+
+
+	<div class="section" ng-controller="diffCtrl">
+      <div class="container">
+        <div class="row">
+			<div class="col-md-6">
+        		<h1>
+        			<i class="fa fa-spinner fa-fw" ng-class="{'fa-pulse': valProcessing}"></i>
+        	  		Check result
+		  		</h1>
+			</div>
+			<div class="col-md-6">
+				<h1>
+					<button class="btn btn-primary btn-lg" ng-click="diff()">Diff</button>
+					<button class="btn btn-warning btn-lg" ng-click="reset()">Reset</button>
+				</h1>
+		  	</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12" >
+				<div class="well" style="min-height:30%" ng-bind-html="diffrst" >
+				</div>
+			</div>
+		</div>
+	</div>
 
     <!--footer-->
     <footer class="section section-primary" ng-controller="footerCtrl">
