--- a/dist-texts/index.html
+++ b/dist-texts/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 	<head>
@@ -10,6 +11,12 @@
 		<!-- <link href="//pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css"> -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	</head>
+
+<div class="section" >
+	<p>시스템 점검으로 서비스가 잠시 중단되었습니다.</p>
+</div>
+
+<!--
 
 <body ng-app="DistText">
 
@@ -74,4 +81,8 @@
 <script src="assets/js/main.js"></script>
 
 </body>
+
+-->
+
 </html>
+
