--- a/dist-texts/index.html
+++ b/dist-texts/index.html
@@ -2,21 +2,17 @@
 
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>한의학고전DB | 고의서 원문배포</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="shortcut icon" href="assets/img/favicon.ico">
-		<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		<!-- <link href="//pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css"> -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	</head>
+<head>
+	<meta charset="utf-8">
+	<title>고의서 원문배포 | 한의학고전DB</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="//pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+</head>
 
-<div class="section" >
-	<p>시스템 점검으로 서비스가 잠시 중단되었습니다.</p>
-</div>
 
-<!--
 
 <body ng-app="DistText">
 
@@ -26,31 +22,33 @@
 			<div class="col-md-12 jumbotron" >
 				<h1>고의서 원문 배포 서비스 <small>한의학고전DB <a href="#/"><i class="fa fa-home" aria-hidden="true"></i></a></small></h1>
 				<br>
-				<p><a href="https://mediclassics.kr" target="_blank">한의학고전DB</a>에서 제공하고 있는 고의서 원문 가운데 공공성이 높은 것들은 단계적으로 이 페이지를 통해 배포할 예정입니다. </p>
-
+				<p>
+					<a href="https://mediclassics.kr" target="_blank">한의학고전DB</a>에서 제공하고 있는 고의서 원문 가운데 공공성이 높은 것들을 단계적으로 배포할 예정입니다. </p>
+				<hr>
+				<h3><i class="fa fa-share-square" aria-hidden="true"></i>  사용권한</h3>
+				<ul>
+					<li>배포된 파일은 누구나 비영리 목적으로 자유롭게 사용할 수 있습니다.</li>
+					<li>영리 목적으로 사용하고자 하는 경우에는 E-mail(kiombook@kiom.re.kr)로 문의해 주시기 바랍니다.</li>
+					<li>배포된 파일은 재배포 할 수 있으나 주기적으로 업데이트 되고 있으니 되도록 지양해 주시기 바랍니다.</li>
+					<li>이용시 출처를 "한의학고전DB(mediclassics.kr)"로 밝혀주시기 바랍니다. </li>
+					<li>배포된 파일에는 오류가 있을 수 있으며, 다운로드 받는 시점에 따라 내용에 차이가 있을 수 있습니다.</li>
+					<li>배포된 파일을 사용하여 발생하는 문제들은 온전히 사용자의 책임입니다. </li>
+				</ul>
 				<hr>
 				<h3><i class="fa fa-info-circle" aria-hidden="true"></i>  일러두기</h3>
 				<ul>
-					<li>한의학고전DB 오류 수정 등으로 원문이 수정될 경우 자동으로 update됩니다. 가능한 최신 파일을 받아 사용해 주세요.</li>
-					<li>파일 인코딩은 UTF-8이며, 호환한자(CJK Compatibility Ideographs)는 모두 통합한자(CJK Unified Ideographs = Han)로 변환하였습니다.</li>
-					<li>배포된 파일에는 원문에 포함된 도상, 원문에 대한 교감기가 포함되어 있지 않습니다. 단, 도상 속의 텍스트는 포함되어 있습니다.</li>
-					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="https://mediclassics.github.io/document/document/markup-syntax-for-classics" target="_blank">여기</a>를 참조하여 사용하시기 바랍니다.</li>
+					<li>한의학고전DB 오류 수정 등으로 원문이 수정될 경우 자동으로 update됩니다. 되도록 최신 파일을 받아 사용해 주세요.</li>
+					<li>파일 인코딩은 UTF-8이며, 호환한자(CJK Compatibility Ideographs)는 모두 통합한자(CJK Unified Ideographs)로 변환되어 있습니다.</li>
+					<li>배포되는 파일에는 도상, 원문에 대한 교감기가 포함되어 있지 않습니다. 단, 도상 속의 텍스트는 포함되어 있습니다.</li>
+					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="https://mediclassics.github.io/document/document/markup-syntax-for-classics" target="_blank">관련 문서</a>를 참조하여 사용하시기 바랍니다.</li>
 				</ul>
 				<hr>
 				<h3><i class="fa fa-exclamation-triangle" aria-hidden="true"></i><i class="icon-warning-sign"></i>  주의사항</h3>
 				<ul>
-					<li>다운로드에는 약간의 시간이 소요됩니다. 브라우저를 동작하지 마시고 다운로드가 끝날때 까지 기다려 주시기 바랍니다.</li>
+					<li>다운로드에는 약간의 시간이 소요됩니다. 브라우저를 동작하지 마시고 다운로드가 끝날 때까지 기다려 주시기 바랍니다.</li>
 					<li>IE(Internet Explorer)의 경우 예상치 못한 오류가 나타날 수 있으므로, 동작에 이상이 있을 경우 다른 브라우저를 이용해 주시기 바랍니다.</li>
 					<li>본 페이지의 작동 오류는 <a href="https://github.com/mediclassics/apps/issues" target="_blank">issue report</a>에 신고해 주시기 바랍니다.</li>
 					<li>원문 텍스트의 오류는 <a href="https://mediclassics.kr" target="_blank">한의학고전DB</a> 해당 서적 원문에 신고 부탁드립니다.</li>
-				</ul>
-				<hr>
-				<h3><i class="fa fa-share-square" aria-hidden="true"></i>  사용권한</h3>
-				<ul>
-					<li>배포된 파일은 누구나 자유롭게 사용할 수 있습니다.</li>
-					<li>이용시 출처를 "한의학고전DB(mediclassics.kr)"로 밝혀주시기 바랍니다. </li>
-					<li>배포된 파일에는 오류가 있을 수 있습니다.</li>
-					<li>배포된 파일 사용 중에 발생하는 문제들은 온전히 사용자의 책임입니다. </li>
 				</ul>
 				<hr>
 				<h3><i class="fa fa-download" aria-hidden="true"></i>  배포서적</h3>
@@ -61,9 +59,11 @@
 	</div>
 </div>
 
+
 <div class="section" >
 	<div ng-view></div>
 </div>
+
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -82,7 +82,6 @@
 
 </body>
 
--->
+
 
 </html>
-
