udpate link address

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<li><a href="./combinator/index.html">combinator</a></li>
 	<li><a href="./replacer/index.html">replacer</a></li>
 	<li><a href="./converter/index.html">converter</a></li>
-	<li><a href="./replacer/index.html">dist-texts</a></li>
+	<li><a href="./dist-texts/index.html">dist-texts</a></li>
 	<li><a href="./hanzitn/index.html">hanzitn</a></li>
 </ul>
 
