PATCH link address of dist-texts/index.html

--- a/dist-texts/index.html
+++ b/dist-texts/index.html
@@ -40,7 +40,7 @@
 					<li>한의학고전DB 오류 수정 등으로 원문이 수정될 경우 자동으로 update됩니다. 되도록 최신 파일을 받아 사용해 주세요.</li>
 					<li>파일 인코딩은 UTF-8이며, 호환한자(CJK Compatibility Ideographs)는 모두 통합한자(CJK Unified Ideographs)로 변환되어 있습니다.</li>
 					<li>배포되는 파일에는 도상, 원문에 대한 교감기가 포함되어 있지 않습니다. 단, 도상 속의 텍스트는 포함되어 있습니다.</li>
-					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="https://mediclassics.github.io/document/document/markup-syntax-for-classics" target="_blank">관련 문서</a>를 참조하여 사용하시기 바랍니다.</li>
+					<li>배포된 파일은 간단한 markup 문법이 사용되었습니다. <a href="//info.mediclassics.kr/document/document/markup-syntax-for-classics" target="_blank">관련 문서</a>를 참조하여 사용하시기 바랍니다.</li>
 				</ul>
 				<hr>
 				<h3><i class="fa fa-exclamation-triangle" aria-hidden="true"></i><i class="icon-warning-sign"></i>  주의사항</h3>
