--- a/hanzitn/index.html
+++ b/hanzitn/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="assets/jquery.min.js"></script>
   <script type="text/javascript" src="assets/bootstrap.min.js"></script>
-  <link href="assets/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
+    type="text/css">
   <link href="assets/bootstrap.css" rel="stylesheet" type="text/css">
   <style>
     textarea.form-control {
